--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="click_to_login">Click To Login</string>
     <string name="click_to_register">Click To Register</string>
     <string name="logout">Logout</string>
+    <string name="signup">Signup</string>
+    <string name="don_t_have_an_account">Don\'t have an account ? </string>
+    <string name="already_have_an_account">Already have an account ?</string>
 </resources>
